# bay.st-bets

./: .gitignore  README.md  pyproject.toml
data/: canadian_mutual_funds.csv
src/db/: __init__.py  config.py  create_tables.py  crud.py  data_fetch.py  data_store.py  models.py
src/eda/: bonds.ipynb  crypto.py  equity_eda.py  equity_funds.ipynb  exchange.py  indian_equity.ipynb  options.ipynb
src/scripts/: fetch_stock_data.py
