[project]
name = "bay-st-bets"
version = "0.1.0"
description = "Stocks, ETFs, bonds, commodities tracker, forecasting, personal finance and market analysis project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.0.1",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "openbb>=4.1.3",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "psycopg2>=2.9.11",
    "pytest>=8.4.2",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
    "statsmodels>=0.14.5",
    "yfinance>=0.2.66",
]


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
